@@ -73,7 +73,8 @@
     <version.org.jboss.weld>6.0.0.Alpha1</version.org.jboss.weld> <!-- weld-junit5 -->
     <version.org.jboss.weld-junit>4.0.1.Final</version.org.jboss.weld-junit> <!-- weld-se-core -->
     <version.org.jboss.weld.se>${version.org.jboss.weld}</version.org.jboss.weld.se> <!-- weld-se-core -->
-    <version.org.junit.jupiter>5.11.1</version.org.junit.jupiter>
+    <version.org.junit>5.11.1</version.org.junit>
+    <version.org.junit.jupiter>${version.org.junit}</version.org.junit.jupiter>
     <version.org.mockito>5.14.1</version.org.mockito>
     <version.org.projectlombok>1.18.34</version.org.projectlombok>
     <version.org.reactivestreams>1.0.4</version.org.reactivestreams>
@@ -124,6 +125,13 @@
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
         <version>7.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${version.org.junit}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>io.projectreactor</groupId>
@@ -230,7 +238,6 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
-        <version>${version.org.junit.jupiter}</version>
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
@@ -239,21 +246,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-core</artifactId>-->
-      <!--        <version>${version.org.mockito}</version>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-inline</artifactId>-->
-      <!--        <version>${version.org.mockito.mockito-inline}</version>-->
-      <!--      </dependency>-->
-      <!--      <dependency>-->
-      <!--        <groupId>org.mockito</groupId>-->
-      <!--        <artifactId>mockito-junit-jupiter</artifactId>-->
-      <!--        <version>${version.org.mockito}</version>-->
-      <!--      </dependency>-->
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
@@ -335,6 +327,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${version.org.junit.jupiter}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -409,6 +402,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
           <version>3.6.1</version>
+          <!--          <executions>-->
+          <!--            <execution>-->
+          <!--              <goals>-->
+          <!--                <goal>properties</goal>-->
+          <!--              </goals>-->
+          <!--              <phase>initialize</phase>-->
+          <!--            </execution>-->
+          <!--          </executions>-->
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -513,17 +514,6 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.5.0</version>
         </plugin>
-        <!--
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.21.2</version>
-          <configuration>
-            <targetJdk>${maven.compiler.target}</targetJdk>
-            <skipEmptyReport>false</skipEmptyReport>
-          </configuration>
-          </plugin>
-          -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
@@ -538,10 +528,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${version.maven-surefire}</version>
-          <!--          <configuration>-->
-          <!--            <forkNode>pertest</forkNode>-->
-          <!--            <reuseForks>false</reuseForks>-->
-          <!--          </configuration>-->
+          <configuration>
+            <!-- https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html#0.3 -->
+            <!--            <argLine>@{argLine} -XX:+EnableDynamicAgentLoading -javaagent:${org.mockito:mockito-core:jar}</argLine>-->
+            <!--            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>-->
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -612,6 +603,18 @@
       </plugins>
     </pluginManagement>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>properties</goal>
+            </goals>
+            <phase>initialize</phase>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
